--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   mask_text_input_formatter: ^2.9.0
   google_fonts: ^6.2.1
+  font_awesome_flutter: ^10.7.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -92,3 +93,6 @@ flutter:
 
   assets:
     - assets/paws_pattern.png
+    - assets/nico.jpg 
+    - assets/preta.jpg
+    - assets/raulf.jpg
